# newServidor

./: .Makefile.swp  .gitignore  Makefile  init.sh  requirements.txt
backend/: Makefile  init.sh  manage.py  pyproject.toml  requirements.txt
backend/apps/advogado/: admin.py  apps.py  authUrls.py  models.py  serializers.py  urls.py  validators.py  viewPages.py  viewsSerializer.py
backend/apps/escritorio/: admin.py  apps.py  authUrls.py  models.py  serializers.py  urls.py
backend/apps/ferramentas/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/gerenciamento/: admin.py  apps.py  models.py  url.py  views.py
backend/apps/informacoes/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/newMails/: apps.py  views.py
backend/apps/prevAuth/: apps.py  models.py
backend/apps/sincron/: apps.py  models.py  serializers.py  views.py
backend/datasource/: getResources.py  hearthstone.json  magic.json  marioCart.json  sentryPsd.txt
backend/instalacao/: instalacao.sh  liberaBancoMysql.py  usuarioSQL.sql
backend/logs/: newLoggin.py
backend/logs/historicoLogs/: 2023-05-06_REST.txt  2023-05-07_REST.txt  2023-05-09_REST.txt
backend/newPrevServ/: asgi.py  settings.py  urls.py  wsgi.py
backend/static/css/: main.min.css
backend/static/fonts/: avenirFonts.css  demo.html  hinted-AvenirLTStd-Black.eot  hinted-AvenirLTStd-Book.eot
backend/static/js/: cadastroAdv.js  cadastroEscritorio.js  dashboardEvents.js  modalCardAdvogado.js  requests.js
backend/static/scss/: main.scss
backend/utils/: datetimeUtils.py  helpers.py
(+249 files in other folders)
